--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -35,8 +35,8 @@
       <p>A Django-based website to showcase my skills and projects.</p>
     </div>
     <div class="project">
-      <h3>Quiz App</h3>
-      <p>Web app built using Django for multiple-choice questions.</p>
+      <h3>CareerGuide_AI_Offline</h3>
+      <p>Web app built using Django for CareerGuide- AI.</p>
     </div>
   </section>
 
